--- a/website/index.html
+++ b/website/index.html
@@ -32,9 +32,25 @@
 <div>
 
 <h2 align="middle">Overview</h2>
-<p>Give a high-level overview of what you implemented in this project. Think about what you've built as a whole. Share your thoughts on what interesting things you've learned from completing the project.</p>
+<p>In these project, </p>
 
 <h2 align="middle">Part I: Masses and springs</h2>
+<p></p>
+
+<h2 align="middle">Part II: Simulation via numerical integration</h2>
+<p></p>
+
+<h2 align="middle">Part III: Handling collisions with other objects</h2>
+<p></p>
+
+<h2 align="middle">Part IV: Handling self-collisions</h2>
+<p></p>
+
+<h2 align="middle">Part V: Shaders</h2>
+<p></p>
+
+<h2 align="middle">Extra Credit: Additional cloth simulation features!</h2>
+<p></p>
 
 
 </body>
