added website link

--- a/website/index.html
+++ b/website/index.html
@@ -46,7 +46,7 @@
 <h1 align="middle">CS 184: Computer Graphics and Imaging, Spring 2023</h1>
 <h1 align="middle">Project 4: Cloth Simulator</h1>
 <h2 align="middle">Levy Deng, Matthew Sun, CS184-SP23</h2>
-<a href="https://matthewsunsailing.github.io/proj-webpage/proj4/">Website Link</a>
+<h2 align="middle"><a href="https://matthewsunsailing.github.io/proj-webpage/proj4/">Website Link</a></h2>
 
 <br><br>
 
